DuPont DevSB/src/objects/ffirule__fflib_BatchProcess__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffirule__ApexJobClassName__c</fullName>
        <label>Apex Job Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__ApexJobID__c</fullName>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffirule__BatchControlRecordID__c</fullName>
        <label>Batch Control Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__ConcurrencyModeUniqueID__c</fullName>
        <label>Concurrency Mode Unique ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffirule__CurrentChainIndex__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Deprecated: Current Chain Index</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffirule__CurrentChainNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Chain Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffirule__FailedRecordID__c</fullName>
        <label>Failed Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__FromProgressBar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Progress Bar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__NumberofBatchesinChain__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Chains in Batch</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffirule__ProcessName__c</fullName>
        <label>Process Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__ProgressInformation__c</fullName>
        <label>Progress Information</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__StatusDetail__c</fullName>
        <label>Status Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffirule__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Unknow</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffirule__SuccessfulRecordID__c</fullName>
        <label>Successful Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__TotalChainNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Deprecated: Total Chain Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffirule__UseDefaultConstructor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Constructor</label>
        <type>Checkbox</type>
    </fields>
    <label>Batch Process</label>
    <listViews>
        <fullName>ffirule__All</fullName>
        <columns>NAME</columns>
        <columns>ffirule__Status__c</columns>
        <columns>ffirule__ApexJobClassName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ffirule__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BP-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>